[package]
name = "mitm-cache"
version = "0.1.0"
authors = ["Markus Becker <mtib.becker@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
lazy_static = "1.4.0"
base64 = "0.13.0"

[dependencies.reqwest]
version = "0.10.8"
features = ["blocking"]