[package]
name = "mitm-cache"
version = "0.2.0"
authors = ["Markus Becker <mtib.becker@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
lazy_static = "1.4.0"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.reqwest]
version = "0.10.8"
features = ["blocking"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates"]
